--- a/_notebooks/2022-12-13-unit10-hw.ipynb
+++ b/_notebooks/2022-12-13-unit10-hw.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example of Reverse Binary Search with Recursion"
+    "# Example of Reverse Binary Search with Recursion"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Binary Tree Example"
+    "# Binary Tree Example"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example of Recursive Loop with Fibonacci"
+    "# Example of Recursive Loop with Fibonacci"
    ]
   },
   {
